@@ -1,3 +1,8 @@
+2002-11-18  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSCompatibility.m: Fix for case where a non property list	
+	object is found when outputting a description.
+
 2002-11-12  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSUserDefaults.m: Fix for getting integer, float and bool
